[gd_scene load_steps=3 format=3 uid="uid://town_screen_uid"]

[ext_resource type="Script" path="res://scripts/screens/town_screen.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sky"]
bg_color = Color(0.2, 0.4, 0.6, 1)

[node name="TownScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sky")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="QuestBoardButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quest Board"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Shop"

[node name="MapButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "World Map"

[connection signal="pressed" from="VBoxContainer/QuestBoardButton" to="." method="_on_quest_board_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MapButton" to="." method="_on_map_button_pressed"]